# ft_transcendence

./: .env.dev  .env.exemple  .env.prod  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  test
backend/: .gitignore  Dockerfile  docker-entrypoint.sh  entrypoint.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/authentication/: admin.py  models.py
backend/authentication/migrations/: 0001_initial.py
backend/ft_transcendence/: settings.py
backend/games/: admin.py  apps.py  consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/games/migrations/: 0001_initial.py  0002_initial.py  0002_matchmakingqueue.py  0003_game_loser.py  0003_remove_game_game_state_remove_game_winner_and_more.py  0004_game_player1_score_game_player2_score.py  0004_game_winner.py  0005_alter_game_start_time.py  0006_game_ball_velocity_x_game_ball_velocity_y_and_more.py  0007_game_max_score.py  0008_game_pad1_y_game_pad2_y_game_player_turn.py  0009_game_group_name.py  0010_game_height_game_pad_height_game_pad_width_and_more.py  0011_alter_game_height_alter_game_width.py  0012_remove_game_height_remove_game_width_game_ball_width_and_more.py  0013_game_ball_moving_game_paused_alter_game_player_turn.py  0014_alter_game_ball_velocity_y.py  0015_game_player1_ready_game_player2_ready.py  0016_alter_game_status.py  0017_alter_game_status.py  0018_remove_game_group_name.py  0019_alter_game_ball_x_alter_game_ball_y_and_more.py  0020_alter_game_status.py  0021_game_tournament_delete_matchmakingqueue.py  0022_alter_game_tournament.py  0023_alter_game_ball_velocity_y.py  0024_alter_game_ball_velocity_y.py  0025_alter_game_ball_velocity_y_alter_game_pad_width.py
backend/matches/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/matches/migrations/: 0001_initial.py  0002_remove_match_played_at_remove_match_player1_score_and_more.py  0003_alter_match_player1_alter_match_player2.py
backend/metrics/: metrics.py
backend/middleware/: middleware.py
backend/profiles/: admin.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/profiles/migrations/: 0001_initial.py  0002_initial.py  0003_alter_profile_avatar.py
backend/project/: asgi.py  consumers.py  middleware.py  routing.py  settings.py  urls.py
backend/tournaments/: admin.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/tournaments/migrations/: 0001_initial.py  0002_initial.py  0002_tournament_winner_alter_tournament_status.py  0003_delete_matchmakingqueue.py  0005_match.py  (+16 more)
backend/users/: admin.py  consumers.py  intra.py  models.py  serializers.py  tests.py  urls.py  views.py
(+183 files in other folders)
