[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.3"
django-cors-headers = "^4.3.0"
channels = "^4.0.0"
django-allauth = "^0.58.2"
django-two-factor-auth = "^1.15.5"
daphne = "^4.0.0"
pillow = "^10.1.0"
djangorestframework-simplejwt = "^5.3.0"
channels-redis = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
