[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.3"
django-cors-headers = "^4.3.0"
channels = "^4.0.0"
django-allauth = "^0.58.2"
django-two-factor-auth = "^1.15.5"
daphne = "^4.0.0"
pillow = "^10.1.0"
djangorestframework-simplejwt = "^5.3.0"
channels-redis = "^4.1.0"
uvicorn = "^0.24.0.post1"
whitenoise = "^6.6.0"
websockets = "^12.0"
tqdm = "^4.66.1"
pygments = "^2.17.2"
asgiref = "^3.7.2"
platformdirs = "^3.0.0"
attrs = "^23.2.0"
autobahn = "^23.6.2"
automat = "^22.10.0"
build = "^1.0.3"
cachecontrol = "^0.13.1"
certifi = "^2023.11.17"
cffi = "^1.16.0"
charset-normalizer = "^3.3.2"
cleo = "^2.1.0"
constantly = "^23.10.4"
crashtest = "^0.4.1"
cryptography = "^41.0.7"
defusedxml = "^0.7.1"
deprecated = "^1.2.14"
distlib = "^0.3.8"
django-formtools = "^2.5.1"
django-oauth-toolkit = "^2.3.0"
django-otp = "^1.3.0"
django-phonenumber-field = "^7.3.0"
dulwich = "^0.21.7"
fastjsonschema = "^2.19.1"
filelock = "^3.13.1"
hyperlink = "^21.0.0"
idna = "^3.6"
incremental = "^22.10.0"
installer = "^0.7.0"
jaraco-classes = "^3.3.0"
jeepney = "^0.8.0"
jwcrypto = "^1.5.1"
keyring = "^24.3.0"
more-itertools = "^10.2.0"
msgpack = "^1.0.7"
oauthlib = "^3.2.2"
packaging = "^23.2"
pexpect = "^4.9.0"
pkginfo = "^1.9.6"
poetry = "^1.7.1"
poetry-core = "^1.8.1"
django-prometheus = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportGeneralTypeIssues = false
